--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,6 +16,25 @@
   }
 }
 
+@media (min-width: 320px) {
+  html {
+    font-size: 8px;
+  }
+}
+
+@media (min-width: 768px) {
+  html {
+    font-size: 12px;
+  }
+}
+
+@media (min-width: 1024px) {
+  html {
+    font-size: 16px;
+  }
+}
+
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
